<resources>
    <string name="app_name">CleanerBooking</string>
    <string name="tvforgot">Forgot Password?</string>
    <string name="tvguest">Continue as Guest</string>
    <string name="btnlogin">Login</string>
    <string name="btnsignup">Sign Up</string>
    <string name="btnfb">Login with facebook</string>
    <string name="btngmail">Login with Gmail</string>
    <string name="etemailhint">Email</string>
    <string name="etpasshint">Password</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_booking">Booking</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_services">Services</string>
    <string name="title_redeem">Redeem</string>
    <string name="title_profile">Profile</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="hintConfirm">Confirm</string>
    <string name="btnBook">Book Now</string>
    <string name="contactHint">Need Help? Contact Us with your enquiries...</string>


    <string-array name="weekItem">
        <item>Until Next Week</item>
        <item>Until Next 2 Weeks</item>
        <item>Until Next 3 Weeks</item>
        <item>Until Next 4 Weeks</item>
        <item>Until Next 5 Weeks</item>
        <item>Until Next 6 Weeks</item>
        <item>Until Next 7 Weeks</item>
        <item>Until Next 8 Weeks</item>
        <item>Until Next 9 Weeks</item>
        <item>Until Next 10 Weeks</item>
    </string-array>

    <string-array name="monthItem">
        <item>Until Next Month</item>
        <item>Until Next 2 Months</item>
        <item>Until Next 3 Months</item>
        <item>Until Next 4 Months</item>
        <item>Until Next 5 Months</item>
        <item>Until Next 6 Months</item>
        <item>Until Next 7 Months</item>
        <item>Until Next 8 Months</item>
        <item>Until Next 9 Months</item>
        <item>Until Next 10 Months</item>
    </string-array>


</resources>
